updating the notebook

--- a/01_series.ipynb
+++ b/01_series.ipynb
@@ -17,7 +17,7 @@
     "id": "N71IxY32nEpd"
    },
    "source": [
-    "Since we working with tabular data, we shall use the pandas library which will represent our dataset as a dataframe. A dataframe is simply a table with rows and columns. In this walkthrough, we wont use table much, so where we use dataframe, we shall be meaning the tables."
+    "Since we're working with tabular data, we'll be using the pandas library. This nifty tool will turn our dataset into a dataframe, which is just a fancy way of saying a table with rows and columns. Now, we won't be using the term 'table' much in this walkthrough. So, whenever you hear 'dataframe', just picture those neat rows and columns we're talking about."
    ]
   },
   {
@@ -27,7 +27,7 @@
     "id": "6rO2ihe0DZx2"
    },
    "source": [
-    "To use a library in python you import it using `import` method and the then specify the library. The pd is just being used as a nickiname so that we dont have to retype the word `pandas' over and over again. Let's import it. We wont cover all the pandas methods available. You can use this official site to read about all the methods that pandas has https://pandas.pydata.org/docs/user_guide/index.html"
+    "To start utilizing a library in Python, you simply import it with the 'import' statement and then name the library. For convenience, 'pd' is often used as a shorthand alias for 'pandas', so we don't have to keep typing 'pandas' repeatedly. Let's go ahead and import it. While we won't go through every single pandas method here, you can always visit the official site at https://pandas.pydata.org/docs/user_guide/index.html to explore all the methods pandas offers."
    ]
   },
   {
@@ -49,7 +49,7 @@
     "id": "sdMna3j9Et_K"
    },
    "source": [
-    "Python like any other programming language allows you to use variables that help you to store information, meaning that if at all you want to use this information back you can just recall the varible name."
+    "Python, like any other programming language, allows you to use variables to store information. This means that if you ever need to use this information again, you can simply recall the variable name."
    ]
   },
   {
@@ -133,7 +133,9 @@
     "id": "LzlTTabLD12s"
    },
    "source": [
-    "Most times when we read a file, we want to know what our data is all about forexample how many variables it has, the number of observations and so on. Pandas provides very handy methods that can do this.\n",
+    "# Exploring Data with Pandas\n",
+    "Most times when we read a file, we want to know what our data is all about for example how many variables it has, the number of observations and so on. Pandas provides very handy methods that can do this.\n",
+    "\n",
     "- `df.shape` which returns the number of rows and columns of your table\n",
     "\n",
     "- `df.head()` which returns by default the first 5 rows of the dataframe."
@@ -383,7 +385,7 @@
    "id": "8a1c59c6-cea2-4c64-9cb8-0871f45d84a0",
    "metadata": {},
    "source": [
-    "You can use the columns method that lists all the variable names, and call the `to_list()` function to wrap then in a list. A list is simply a data-structure that helps to store data. In python it's represented by closed brackets `[]`. There are other data structures including dictionaries, arrays and so on. We won't cover all of them but it's nice be aware of their existence. A very nice book I recommend about python basics is `think python` which you can find here. https://greenteapress.com/wp/think-python-2e/. It covers all the data structures used in python in detail. It's possible to do analysis without knowing python basics but knowing them will make you a better and efficient programmer. If your major interest is data analysis, `Python for data analysis` is the best choice I can recommend, https://wesmckinney.com/book/data-analysis-examples.html"
+    "You can use the columns method that lists all the variable names, and call the `to_list()` function to wrap then in a list. A list is simply a data-structure that helps to store data. In python it's represented by closed brackets `[]`. There are other data structures including dictionaries, arrays and so on. We won't cover all of them but it's nice be aware of their existence. A very nice book I recommend about python basics is `think python` which you can find here. https://greenteapress.com/wp/think-python-2e/. It covers all the data structures used in python in detail. It's possible to do analysis without knowing python basics but knowing them will make you a better and efficient programmer. But for now, `Python for data analysis` is the best choice I can recommend for Analysis, https://wesmckinney.com/book/data-analysis-examples.html."
    ]
   },
   {
@@ -540,7 +542,7 @@
    "id": "0cea98c2-aaac-4c8f-923c-db5fc5312ade",
    "metadata": {},
    "source": [
-    "For our randomization, we donot need all the columns, we can just pick the ones we want by defining them in a list. Let's assign a variable to the list. For now we can name it `columns`."
+    "For our randomization, we don't need all the columns, we can just pick the ones we want by defining them in a list. Let's assign a variable to the list. For now, we can name it `columns`."
    ]
   },
   {
@@ -570,7 +572,7 @@
    "id": "adb4ab8c-122f-4a2b-9e58-967dcd61f6c8",
    "metadata": {},
    "source": [
-    "Masking these columns on to our dataframe returns a dataframe with only the columns that we have specified. You realize that we are re assigning the df variable meaning that the older one will be over written"
+    "When you apply a mask to your dataframe, it's like giving it a new shape, only showing the columns you tell it to. It's a bit like magic! Just remember, when you reassign 'df', you're basically telling the old one to take a hike, because there's a new dataframe in town."
    ]
   },
   {
@@ -590,7 +592,7 @@
    "id": "6a3ab425-947a-4248-b2f1-76b771389800",
    "metadata": {},
    "source": [
-    "Pandas has another interesting method that gives you the counts of each category in a particular column"
+    "Pandas has another interesting method that gives you the counts of each category in a particular column. It's super handy when you're trying to get a quick overview of your data and see which categories are the most common. Just a few lines of code, and you've got yourself a neat little summary of your dataset!"
    ]
   },
   {
@@ -636,7 +638,7 @@
    "id": "f651cbdf-57af-45b1-8859-f0a43e8088dd",
    "metadata": {},
    "source": [
-    "In fact passing some parameters normalize=True, gives you proportions, this is something that you might do almost every day when you are reporting your analysis"
+    "In fact, when you're crunching numbers and diving into data analysis, tweaking a few parameters can make a world of difference. For instance, setting normalize=True is like flipping a switch that transforms raw numbers into proportions. It's a nifty trick that comes in handy almost daily, especially when you're piecing together reports and need to present your findings in a way that's easy to digest."
    ]
   },
   {
@@ -682,9 +684,9 @@
    "id": "d293b23a-65ac-44ed-be8f-e40ef32378f7",
    "metadata": {},
    "source": [
-    "Since we are trying to do randomization, we dont want any case of duplicated values, pandas has support for us. We can just use drop duplicates, and pass in the `column` that we get rid of duplicates. \n",
+    "Since we are trying to do randomization, we don't want any case of duplicated values. Thankfully, pandas has support for us. We can just use the method drop_duplicates, and pass in the `column` where we want to get rid of duplicates. \n",
     "\n",
-    "- A duplicate means some values are repeating, so first retains the first value, whereas last returns the duplicated value."
+    "A duplicate means some values are repeating, so using 'first' retains the first occurrence, whereas 'last' would return the last duplicated value."
    ]
   },
   {
@@ -704,7 +706,7 @@
    "id": "92862086-051b-491b-b81f-7973d5204716",
    "metadata": {},
    "source": [
-    "Something that you might use almost all the time is filtering. Forexample We might want to just work with Kiryandongo without minding about the rest of the districts. We use this code, the most interesting thing is that we can store the Kiryadongo dataframe in a variable without clearing the df variable."
+    "Filtering is a common task in data manipulation, especially when you need to focus on a specific subset of data. For instance, if you're only interested in analyzing data from Kiryandongo district, you can easily filter out the rest. Here's how you do it: simply use the filtering code (==) to isolate Kiryandongo's data. The beauty of it is that you can assign this filtered data to a new variable, keeping your original dataframe intact for further use."
    ]
   },
   {
@@ -904,11 +906,11 @@
    "id": "195337aa-dae7-40c0-93cc-af423dd45102",
    "metadata": {},
    "source": [
-    "In programming, functions are things you might do frequently. For analysis I found lambda functions easier to more intuitive to manipulate things faster forexample here.\n",
+    "In programming, functions are like your go-to tools for tasks you perform often. When it comes to data analysis, I've found that lambda functions are just slicker and quicker for whipping things into shape. Take this code below for instance.\n",
     "\n",
-    "The major pieces here\n",
-    "- For a row, if that value is less than or equal to 30, over write with 'Youth Headed'\n",
-    "- Otherwise, Maintain the value [Male or Female] but add the string 'Headed' to make it Male Headed or Female Headed."
+    "Here's the breakdown:\n",
+    "- Spot a row with a value 30 or less? Tag it as 'Youth Headed'.\n",
+    "- Otherwise, keep it as 'Male' or 'Female', but tack on 'Headed' to get 'Male Headed' or 'Female Headed'."
    ]
   },
   {
@@ -1241,14 +1243,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 26,
-   "id": "f7f733fd-2454-4bdf-9695-63bb7d158a5b",
+   "cell_type": "markdown",
+   "id": "06b6843a-c38f-4762-bf14-a85438d5a937",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# for n >= 100 we need 30 sample\n",
-    "# for n < 100 we need 24 samples"
+    "for n >= 100 we need 30 sample, \n",
+    "for n < 100 we need 24 samples"
    ]
   },
   {
@@ -1441,6 +1441,14 @@
     "        return x.sample(n=min(len(x), sample_size))\n",
     "    else:\n",
     "        return x.sample(n=min(len(x), 12))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4a9e3e52-b1c5-4c8b-8c3e-9f692f5ee2dc",
+   "metadata": {},
+   "source": [
+    "Apply just works as our old lambda function, whereby you can "
    ]
   },
   {
@@ -3262,7 +3270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 5,
    "id": "d6f41377-070b-4331-9cdd-398e6fcfc143",
    "metadata": {},
    "outputs": [],
