adding all the files

--- a/02_series.ipynb
+++ b/02_series.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "45a6f765-86ab-4904-abda-8958c99fd666",
    "metadata": {
     "tags": []
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": null,
    "id": "4c695eed-9709-4033-9b8d-c4a00a047892",
    "metadata": {
     "tags": []
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": null,
    "id": "141edbb6-06f6-4d57-a8b0-0ac9c8555291",
    "metadata": {
     "tags": []
@@ -42,14 +42,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": null,
    "id": "c8518589-8c54-435e-bd25-1c96cf4efbdc",
    "metadata": {
     "tags": []
    },
    "outputs": [],
    "source": [
-    "path = Path(\"midwest2024.xlsx\")\n",
+    "path = Path(\"Kawiti.xlsx\")\n",
     "data = read_file(path)"
    ]
   },
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": null,
    "id": "3407d673-8b84-4ed4-9a57-98c764244290",
    "metadata": {
     "tags": []
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": null,
    "id": "0e64a2fb-ca57-4c76-86d9-785380cb60a0",
    "metadata": {
     "tags": []
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": null,
    "id": "64425a16-7726-4066-ac9e-5a77d4bae1e1",
    "metadata": {
     "tags": []
@@ -109,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": null,
    "id": "fa33259f-fd7a-48df-823a-1e584ad04c1d",
    "metadata": {
     "tags": []
@@ -118,6 +118,54 @@
    "source": [
     "FINAL = get_final_df(df.copy(), village_counts)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "53e07560-a6e2-48c3-9036-6c858b254cfa",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "FINAL"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fbdf2133-e4f2-4e84-bdfd-439a25963724",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "FINAL.to_excel(\"Kawiti.xlsx\", index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "dfe784b8-a015-440b-920a-0ae13862583c",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a959bdad-1b7a-47f8-814e-274cd9b1431e",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "37692a99-9eac-492b-bc2b-e7017c2bcfbc",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -136,7 +184,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.10.9"
   }
  },
  "nbformat": 4,
